--- a/.env.example
+++ b/.env.example
@@ -39,10 +39,13 @@ PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
 TESTBOT_PRIVATE_KEY=
+AR_PRIVATE_KEY=
 
 VKONTAKTE_KEY=
 VKONTAKTE_SECRET=
 VKONTAKTE_REDIRECT_URI=
+
+FRONTEND_URL=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
